fix: fixed whole viewport scrolling when overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -69,6 +69,7 @@ body {
 #root,
 .App {
   height: 100%;
+  overflow: hidden;
 }
 
 .App {
